--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-name: One+ Build Susf4Ksu
+name: OnePlus Build Susf4Ksu
 
 on:
   push:
@@ -11,6 +11,7 @@ env:
   ROOT_DIR_PREFIX: "OP13r-A15"
   BRANCH: "android14-6.1"
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  SUSFS_URL: "https://github.com/sidex15/ksu_module_susfs/releases/latest/download/ksu_module_susfs_1.5.2+.zip"
 
 jobs:
   build-release:
@@ -19,22 +20,20 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
 
       - name: Free Disk Space
         run: |
           sudo apt-get update -qq
-          sudo apt-get install -qq curl jq
+          sudo apt-get install -qq curl
           curl -fsSL https://raw.githubusercontent.com/kou/arrow/e49d8ae15583ceff03237571569099a6ad62be32/ci/scripts/util_free_space.sh | bash
 
       - name: Setup Build Environment
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
-            python3-pip curl git zip unzip gcc g++ make ninja-build file \
+            python3-pip curl git zip unzip gcc g++ make ninja-build \
             bc bison flex libssl-dev libelf-dev wget build-essential \
-            python3-dev python3-setuptools rsync ccache cmake libdw-dev zlib1g-dev jq
+            python3-dev python3-setuptools rsync ccache cmake libdw-dev zlib1g-dev
 
       - name: Setup ccache
         uses: hendrikmuhs/ccache-action@v1.2
@@ -57,21 +56,18 @@ jobs:
           ROOT_DIR="${ROOT_DIR_PREFIX}-$(date +'%Y-%m-%d-%I-%M-%p')-release"
           echo "ROOT_DIR=${ROOT_DIR}" >> $GITHUB_ENV
           mkdir -p "builds/${ROOT_DIR}"
+          cd "builds/${ROOT_DIR}"
 
       - name: Clone Required Repositories
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
           repos=(
-            "https://github.com/Kernel-SU/AnyKernel3 --depth=1 AnyKernel3"
-            "https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android14-6.1 susfs4ksu"
-            "https://github.com/WildPlusKernel/kernel_patches.git kernel_patches"
+            "https://github.com/Kernel-SU/AnyKernel3 --depth=1"
+            "https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android14-6.1"
+            "https://github.com/WildPlusKernel/kernel_patches.git"
           )
-          for repo_info in "${repos[@]}"; do
-            repo=$(echo "$repo_info" | awk '{print $1}')
-            branch_or_args=$(echo "$repo_info" | awk '{$1=""; $NF=""; print $0}' | sed 's/^[ \t]*//;s/[ \t]*$//')
-            dest=$(echo "$repo_info" | awk '{print $NF}')
-            echo "Cloning $repo $branch_or_args into $dest..."
-            git clone $repo $branch_or_args "$dest" || { echo "Failed to clone $repo"; exit 1; }
+          for repo in "${repos[@]}"; do
+            git clone $repo || { echo "Failed to clone $repo"; exit 1; }
           done
 
       - name: Setup Kernel Source
@@ -89,8 +85,7 @@ jobs:
           curl -LSs "https://raw.githubusercontent.com/rifsxd/KernelSU-Next/next/kernel/setup.sh" | bash -s next
           git submodule update --init --recursive
           cd KernelSU-Next/kernel
-          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+ 10200")
-          echo "Calculated KSU_VERSION: $KSU_VERSION"
+          KSU_VERSION=$(expr $(/usr/bin/git rev-list --count HEAD) "+" 10200)
           echo "KSUVER=$KSU_VERSION" >> $GITHUB_ENV
           sed -i "s/DKSU_VERSION=11998/DKSU_VERSION=${KSU_VERSION}/" Makefile
 
@@ -98,46 +93,41 @@ jobs:
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
           set -euxo pipefail
-          echo "Copying patches and source files..."
-          cp ../../../susfs4ksu/kernel_patches/50_add_susfs_in_gki-android14-6.1.patch ./common/
-          cp ../../../kernel_patches/next/0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch ./KernelSU-Next/
-          cp ../../../kernel_patches/next/syscall_hooks.patch ./common/
-          cp ../../../susfs4ksu/kernel_patches/fs/* ./common/fs/
-          cp ../../../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
-          echo "Applying patches..."
+          git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-android14-6.1
+          git clone https://github.com/WildPlusKernel/kernel_patches.git
+          cp susfs4ksu/kernel_patches/50_add_susfs_in_gki-android14-6.1.patch ./common/
+          cp kernel_patches/next/0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch ./KernelSU-Next/
+          cp kernel_patches/next/syscall_hooks.patch ./common/
+          cp susfs4ksu/kernel_patches/fs/* ./common/fs/
+          cp susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
           cd ./KernelSU-Next
           patch -p1 < 0001-kernel-patch-susfs-v1.5.5-to-KernelSU-Next-v1.0.5.patch || true
           cd ../common
           patch -p1 < 50_add_susfs_in_gki-android14-6.1.patch || true
-          if [ -f ../../../kernel_patches/69_hide_stuff.patch ]; then
-            echo "Applying hide_stuff patch..."
-            cp ../../../kernel_patches/69_hide_stuff.patch ./
+          if [ -f kernel_patches/69_hide_stuff.patch ]; then
+            cp kernel_patches/69_hide_stuff.patch ./
             patch -p1 -F 3 < 69_hide_stuff.patch || true
-          else
-            echo "hide_stuff patch not found at ../../../kernel_patches/69_hide_stuff.patch"
           fi
-          echo "Applying syscall_hooks patch..."
           patch -p1 -F 3 < syscall_hooks.patch || true
 
       - name: Configure Kernel
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
           set -e
-          echo "Appending KernelSU/SUSFS configs to gki_defconfig..."
           CONFIGS=(
-            "CONFIG_KSU=y"
-            "CONFIG_KSU_WITH_KPROBES=n"
+            "CONFIG_KSU=y" 
+            "CONFIG_KSU_WITH_KPROBES=n" 
             "CONFIG_KSU_SUSFS=y"
-            "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y"
-            "CONFIG_KSU_SUSFS_SUS_PATH=y"
+            "CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y" 
+            "CONFIG_KSU_SUSFS_SUS_PATH=y" 
             "CONFIG_KSU_SUSFS_SUS_MOUNT=y"
             "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_KSU_DEFAULT_MOUNT=y"
-            "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT=y"
+            "CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT=y" 
             "CONFIG_KSU_SUSFS_SUS_KSTAT=y"
             "CONFIG_KSU_SUSFS_SUS_OVERLAYFS=n"
-            "CONFIG_KSU_SUSFS_TRY_UMOUNT=y"
+            "CONFIG_KSU_SUSFS_TRY_UMOUNT=y" 
             "CONFIG_KSU_SUSFS_AUTO_ADD_TRY_UMOUNT_FOR_BIND_MOUNT=y"
-            "CONFIG_KSU_SUSFS_SPOOF_UNAME=y"
+            "CONFIG_KSU_SUSFS_SPOOF_UNAME=y" 
             "CONFIG_KSU_SUSFS_ENABLE_LOG=y"
             "CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y"
             "CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y"
@@ -158,25 +148,24 @@ jobs:
           for CONFIG in "${CONFIGS[@]}"; do
             echo "$CONFIG" >> ./common/arch/arm64/configs/gki_defconfig
           done
-          echo "Modifying build.config.gki..."
-          sed -i 's/check_defconfig//' ./common/build.config.gki
+          sed -i '2s/check_defconfig//' ./common/build.config.gki
 
       - name: Run sed Commands
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/kernel_platform
         run: |
-          echo "Running sed commands to remove -dirty suffix..."
+          echo "Running sed commands..."
+          sed -i 's/check_defconfig//' ./common/build.config.gki
           sed -i 's/-dirty//' ./common/scripts/setlocalversion
           sed -i 's/-dirty//' ./msm-kernel/scripts/setlocalversion
           sed -i 's/-dirty//' ./external/dtc/scripts/setlocalversion
-          sed -i 's/-dirty//' ./build/kernel/kleaf/workspace_status_stamp.py || echo "No workspace_status_stamp.py found to patch."
+          sed -i 's/-dirty//' ./build/kernel/kleaf/workspace_status_stamp.py || echo "No workspace_status_stamp.py!"
 
       - name: Build Kernel
         working-directory: builds/${{ env.ROOT_DIR }}/kernel_platform/oneplus13r_v/
         run: |
           cd kernel_platform
-          mkdir -p out
+          mkdir out
           export PATH="/usr/lib/ccache:$PATH"
-          echo "Starting kernel build..."
           ./build_with_bazel.py \
             -t pineapple \
             gki \
@@ -187,35 +176,20 @@ jobs:
             --ignore_missing_projects \
             --lto=thin \
             -o "$(pwd)/out" || { echo "Bazel build failed"; exit 1; }
-          echo "Kernel build finished."
 
       - name: Create ZIP Package
         working-directory: builds/${{ env.ROOT_DIR }}
         run: |
-          echo "Checking for Kernel Image..."
-          KERNEL_IMAGE_PATH="kernel_platform/oneplus13r_v/kernel_platform/out/dist/Image"
-          if [ ! -f "$KERNEL_IMAGE_PATH" ]; then
-            echo "❌ Kernel image not found at $KERNEL_IMAGE_PATH"
-            ls -lR kernel_platform/oneplus13r_v/kernel_platform/out/dist/
+          if [ ! -f kernel_platform/oneplus13r_v/kernel_platform/out/dist/Image ]; then
+            echo "❌ Kernel image not found"
             exit 1
           fi
-          echo "Copying Kernel Image to AnyKernel3..."
-          cp "$KERNEL_IMAGE_PATH" AnyKernel3/Image || { echo "❌ Failed to copy kernel image"; exit 1; }
-          
+          cp kernel_platform/oneplus13r_v/kernel_platform/out/dist/Image AnyKernel3/Image || { echo "❌ Failed to copy kernel image"; exit 1; }
           cd AnyKernel3
-          echo "Contents of AnyKernel3 before zipping:"
-          ls -lA
-
-          if [ -z "${{ env.KSUVER }}" ]; then
-            echo "❌ KSUVER environment variable is not set!"
-            exit 1
-          fi
           ZIP_NAME="OP13r-KSU-${{ env.KSUVER }}.zip"
           echo "📦 Creating zip file: $ZIP_NAME"
-          zip -r9 "../$ZIP_NAME" ./* .??* || { echo "❌ Failed to create zip file"; exit 1; }
-          cd ..
-          echo "Generated Zip:"
-          ls -lh "$ZIP_NAME"
+          zip -r "../$ZIP_NAME" ./* || { echo "❌ Failed to create zip file"; exit 1; }
+          ls -lh "../$ZIP_NAME"
           echo "zip_name=$ZIP_NAME" >> $GITHUB_ENV
 
       - name: Upload Build Artifacts
